# table-grep

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  grep.rs  main.rs  output.rs
test_data/: test_file_1.csv
