[package]
name = "table-grep"
version = "0.1.1"
edition = "2024"
description = "A grep-like tool for searching CSV and Parquet table files"

authors = ["DeflateAwning"]
license = "BSD-3-Clause"

[[bin]]
name = "table-grep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
parquet = { version = "57", features = ["arrow"] }
arrow = { version = "57", features = ["prettyprint"] }
regex = "1"
anyhow = "1"
colored = "2"
walkdir = "2"
atty = "0.2"
comfy-table = "7.2.2"

[profile.release]
opt-level = 3
